# ObstacleAvoidanceHyRL

./: .env  .gitignore  Dockerfile  HyRL.py  Makefile  NIX_USAGE.md  README.md  critical_points.npz  fix_models.py  flake.nix  main.py  manifest.in  plot_policy.py  pyproject.toml  setup.py  utils.py
.github/workflows/: build-and-push.yml  nix-test.yml
HyRL/: HyRL.py  obstacleavoidance_env.py  plot_policy.py  train_dqn.py  utils.py
HyRLServer/: hyrl.py  hyrl_grpc.py  hyrl_pb2.py  server.py
examples/: main.py  obstacle_avoidance.py
pkgs/: stable_baselines3.nix
protos/: hyrl.proto
protos/hyrl_api/: obstacle_avoidance.proto
src/HyRL/: HyRL.py  __init__.py  obstacleavoidance_env.py  plot_policy.py  train_dqn.py  utils.py
src/hyrl/: __init__.py  obstacleavoidance_env.py
src/hyrl_api/: hyrl.py  obstacle_avoidance_grpc.py  obstacle_avoidance_pb2.py  obstacle_avoidance_pb2.pyi
src/rl_policy/: server.py
