[project]
name = "HyRL"
version = "1.0.0"
description = "Hybrid Reinforcement Learning server for obstacle avoidance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "shimmy",
  "gymnasium",
  "torch",
  "scikit-learn",
  "numpy",
  "stable-baselines3",
  "betterproto>=1.2.5",
  "grpcio-tools>=1.71.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.7",
  "protobuf>=5.29.4",
  "jinja2>=3.1.0",
  "matplotlib>=3.7.0",
  "python-dotenv>=0.9.9",
]

[project.scripts]
hyrl-server = "rl_policy.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
# packages = ["HyRL", "rl_policy", "hyrl_api"]

[tool.setuptools.package-data]
"HyRL" = ["models/*.zip"]

[tool.uv]
package = true

[dependency-groups]
dev = ["matplotlib", "setuptools"]
