[project]
name = "hyrl"
version = "1.0.0"
description = "Hybrid Reinforcement Learning server for obstacle avoidance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "shimmy",
  "gymnasium",
  "torch>=2.0.0",
  "scikit-learn",
  "numpy",
  "stable-baselines3>=2.2.0",
  "betterproto>=1.2.5",
  "grpcio-tools>=1.71.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.7",
  "protobuf>=5.29.4",
  "matplotlib>=3.7.0",
  "python-dotenv>=0.9.9",
]

[project.scripts]
hyrl-server = "rl_policy.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hyrl" = ["models/*.zip"]

[tool.uv]
package = true

[dependency-groups]
dev = ["matplotlib", "setuptools"]
