[project]
name = "HyRL"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "shimmy",
  "gym",
  "torch",
  "scikit-learn",
  "numpy",
  "stable-baselines3",
  "betterproto>=1.2.5",
  "grpcio-tools>=1.71.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.7",
  "protobuf>=5.29.4",


  "betterproto>=1.2.5",
  "grpcio-tools>=1.71.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.7",
  "protobuf>=5.29.4",
  "jinja2>=3.1.0",

  "matplotlib>=3.7.0",
  "dotenv>=0.9.9",
]

[tool.setuptools]
package-dir = { "" = "src", "HyRL" = "HyRL" }
packages = ["rl_policy", "hyrl_api", "HyRL"]

[tool.setuptools.package-data]
"HyRL" = ["models/*"]

[dependency-groups]
dev = ["matplotlib", "setuptools"]
